--- a/app/src/pages/about/index.css
+++ b/app/src/pages/about/index.css
@@ -1,10 +1,17 @@
 /*@import 'normalize.css';*/
 
 .box2 {
-  width: 300px;
-  height: 300px;
+  width: 250px;
+  height: 250px;
   display: grid;
   transition: all 0.5s;
   user-select: none;
   background-image: url('shared/assets/img/img.png');
+  background-size: cover;
+  border: 0.5rem solid tomato;
+  border-radius: 0.5rem;
+}
+
+.box2:hover {
+  border-radius: 2rem;
 }
