--- a/app/src/shared/assets/css/index.css
+++ b/app/src/shared/assets/css/index.css
@@ -5,10 +5,10 @@
 }
 
 h1 {
-  color: green;
+  /*color: green;*/
   /*color: red;*/
   font-size: 3rem;
-  background: red;
+  /*background: red;*/
   display: inline-block;
 }
 
