--- a/app/src/pages/about/index.css
+++ b/app/src/pages/about/index.css
@@ -1,14 +1,17 @@
 /*@import 'normalize.css';*/
 
+:root {
+  font-size: 16px;
+}
 .box2 {
-  width: 250px;
-  height: 250px;
+  width: 200px;
+  height: 200px;
   display: grid;
-  transition: all 0.5s;
   user-select: none;
   background-image: url('shared/assets/img/img.png');
-  background-size: cover;
-  border: 0.5rem solid tomato;
+  background-size: contain;
+  border: 0.5rem solid red;
+  box-shadow: 40px 20px 40px -10px rgba(0,0,0,0.5);
   border-radius: 0.5rem;
 }
 
