--- a/app/src/shared/assets/css/index.css
+++ b/app/src/shared/assets/css/index.css
@@ -24,13 +24,15 @@
   --screen-lg: 75em;
   --screen-xl: 88em;
 
-  --space-3xs: 0.25rem; /* 4px */
-  --space-2xs: 0.5rem; /* 8px */
-  --space-xs: 0.625rem; /* 10px */
-  --space-sm: 0.75rem; /* 12px */
-  --space-md: 1rem; /* 16px */
-  --space-lg: 1.25rem; /* 20px */
-  --space-xl: 1.5rem; /* 24px */
+  --space-4: 0.25rem; /* 4px */
+  --space-8: 0.5rem; /* 8px */
+  --space-10: 0.625rem; /* 10px */
+  --space-12: 0.75rem; /* 12px */
+  --space-16: 1rem; /* 16px */
+  --space-20: 1.25rem; /* 20px */
+  --space-24: 1.5rem; /* 24px */
+  --space-32: 2rem; /* 32px */
+  /* ...etc */
 
   --fz-xs: 0.75rem;
   --fz-sm: 0.875rem;
